# Data_Science_Journey

./: Matplotlib_&_Seaborn.py  Opps.py  README.md  pandas_Cond.py  pandas_in_depth.py  tempCodeRunnerFile.py
Conditional and looping Statements/: if_condition.py
DS Learning/: README.md  tempCodeRunnerFile.py
DS Learning/Conditional and looping Statements/: for_loop.py
DS Learning/Data Structures/: dict.py  lists.py  sets.py  strings.py  tuples.py  variables.py
DS Learning/Pandas/: pandas_Cond.py  pandas_in_depth.py
DS Learning/Projects/Project_1/: pyproject.toml
Data Structures/: lambda_fun.py  modules.py  myprogram.py  python_numbers.py
Matplotlin & Seaborn/: Matplotlib_&_Seaborn.py
OOPs/: Opps.py
Projects/Project_1/: main.py
Projects/Project_1/Project2/: pyproject.toml
Projects/Project_2/: main.py
Projects/Project_3/: main.py  pyproject.toml
