[project]
name = "project-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.14.0",
    "google-generativeai>=0.8.6",
    "matplotlib>=3.11.1",
    "pandas>=3.0.5",
    "python-dotenv>=1.2.2",
    "streamlit>=1.60.0",
]
